# rofi-nerdy

./: Cargo.toml  README.md  justfile
.github/workflows/: test.yml
src/: icons.rs  lib.rs  utils.rs
