[package]
name = "rofi-nerdy"
authors = ["Rolv Apneseth"]
description = "Nerd font icon selector plugin for rofi"
version = "0.0.7"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
rofi-mode = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]
